--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,5 @@ name = "spam_or_ham"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
