--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,5 @@ edition = "2021"
 
 [dependencies]
 reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
+tempfile = "3.12.0"
+zip = "2.1.6"
