--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
+rustlearn = "0.5.0"
 tempfile = "3.12.0"
 zip = "2.1.6"
