--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
 rustlearn = "0.5.0"
 tempfile = "3.12.0"
+time = "0.3.36"
 zip = "2.1.6"
